# coc.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  debug.txt
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  feature_request.yml
.github/workflows/: build.yaml  build.yml  cargofmt.yaml  cargofmt.yml  clippy.yaml  clippy.yml  publish.yml  rust.yml  test.yml
src/: api.rs  clash_of_stats.rs  cos.rs  credentials.rs  dev.rs  dev_models.rs  endpoints.rs  entites.rs  entities.rs  error.rs  events.rs  http.rs  lib.rs  models.rs  test.rs  tests.rs  tests_cos.rs
src/cos_models/: clan.rs  clan_history.rs  leaderboard_options.rs  leaderboards.rs  mod.rs  player.rs  player_history.rs  rankings.rs
src/dev_models/: existing_key.rs
src/entites/: _clan.rs  _player.rs  badge_urls.rs  clan.rs  current_war.rs  player.rs
src/entities/: clan.rs  current_war.rs  paging.rs  player.rs
src/models/: badge_urls.rs  clan.rs  clan_capital.rs  clan_ranking.rs  clan_search.rs  current_war.rs  gold_pass.rs  icon_urls.rs  labels.rs  leagues.rs  location.rs  locations.rs  mod.rs  paging.rs  player.rs  player_ranking.rs  rankings.rs  season.rs  war.rs  war_log.rs
src/prelude/: mod.rs
src/util/: hash_tag_code_generator.rs  logic_long.rs  logic_long_to_code_converter_util.rs  mod.rs
