[package]
name = "coc-rs"
version = "0.8.0"
authors = ["Amaan Qureshi i<amaanq12@gmail.com>", "SaHiL"]
edition = "2021"
description = "A Rust crate wrapper around the Clash of Clans public API"
readme = "README.md"
homepage = "https://github.com/amaanq/coc.rs#README"
repository = "https://github.com/amaanq/coc.rs"
license = "MIT"
keywords = ["Clash_of_Clans", "Clash", "coc", "api", "Supercell"]
categories = [
	"api-bindings",
	"asynchronous",
	"concurrency",
	"config",
	"web-programming::http-client",
]
exclude = [".idea/", ".vscode/", "*.txt"]

[dependencies]
anyhow = "1.0.69"
async-recursion = "1.0.2"
async-trait = "0.1.64"
base64 = "0.21.0"
chrono = "0.4.23"
dashmap = "5.4.0"
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
regex = "1.7.1"
thiserror = "1.0.38"
time = "0.3.17"
url = "2.3.1"
urlencoding = "2.1.2"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_repr = "0.1.10"

futures = "0.3.26"
parking_lot = "0.12.1"
reqwest = { version = "0.11.14", features = [
	"json",
	"cookie_store",
	"cookies",
] }
tokio = { version = "1.25.0", features = ["full"] }

tracing = { version = "0.1.37", optional = true }

[dev-dependencies]
rand = "0.8.5"

[lib]
doctest = false

[features]
default = []
cos = []
extra = []
all = ["cos", "extra", "tracing"]
