[package]
name = "coc-rs"
version = "0.8.1"
authors = ["Amaan Qureshi <amaanq12@gmail.com>", "Sahil"]
edition = "2021"
description = "A Rust crate wrapper around the Clash of Clans public API"
readme = "README.md"
homepage = "https://github.com/amaanq/coc.rs#README"
repository = "https://github.com/amaanq/coc.rs"
license = "MIT"
keywords = ["Clash_of_Clans", "Clash", "coc", "api", "Supercell"]
categories = [
	"api-bindings",
	"asynchronous",
	"concurrency",
	"config",
	"web-programming::http-client",
]
exclude = [".idea/", ".vscode/", "*.txt"]

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
async-trait = "0.1.68"
base64 = "0.21.0"
chrono = "0.4.24"
dashmap = "5.4.0"
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.7.1"
thiserror = "1.0.40"
time = "0.3.20"
url = "2.3.1"
urlencoding = "2.1.2"

serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"

futures = "0.3.28"
parking_lot = "0.12.1"
reqwest = { version = "0.11.17", features = [
	"json",
	"cookie_store",
	"cookies",
] }
tokio = { version = "1.28.0", features = ["full"] }

tracing = { version = "0.1.37", optional = true }

[lib]
doctest = false

[features]
default = []
cos = []
extra = []
all = ["cos", "extra", "tracing"]
