[package]
name = "coc-rs"
version = "0.8.2"
authors = ["Amaan Qureshi <amaanq12@gmail.com>", "Sahil"]
edition = "2021"
description = "A Rust crate wrapper around the Clash of Clans public API"
readme = "README.md"
homepage = "https://github.com/amaanq/coc.rs#README"
repository = "https://github.com/amaanq/coc.rs"
license = "MIT"
keywords = ["Clash_of_Clans", "Clash", "coc", "api", "Supercell"]
categories = [
	"api-bindings",
	"asynchronous",
	"concurrency",
	"config",
	"web-programming::http-client",
]
exclude = [".idea/", ".vscode/", "*.txt"]

[dependencies]
anyhow = "~1.0.75"
async-recursion = "~1.0.4"
async-trait = "~0.1.73"
base64 = "~0.21.3"
chrono = "~0.4.28"
dashmap = "~5.5.3"
lazy_static = "~1.4.0"
num-derive = "~0.4.0"
num-traits = "~0.2.16"
rand = "~0.8.5"
regex = "~1.10.2"
thiserror = "~1.0.47"
time = "~0.3.28"
url = "~2.4.1"
urlencoding = "~2.1.3"

serde = { version = "~1.0.188", features = ["derive"] }
serde_json = "~1.0.105"
serde_repr = "~0.1.16"

futures = "~0.3.28"
parking_lot = "~0.12.1"
reqwest = { version = "~0.11.20", features = [
	"json",
	"cookie_store",
	"cookies",
] }
tokio = { version = "~1.32.0", features = ["full"] }

tracing = { version = "~0.1.37", optional = true }

[lib]
doctest = false

[features]
default = []
cos = []
extra = []
all = ["cos", "extra", "tracing"]
